workloads/shift/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: shift
  namespace: shift
spec:
  parentRefs:
    - name: main
      namespace: gateway
  hostnames:
    - shift.cyberdan.dev
  rules:
    - backendRefs:
        - name: shift
          port: 80
